fix: Fix visible popup for search

--- a/client/Components/Header/elems/Search/elems/ModalSearch/ModalSearch.module.css
+++ b/client/Components/Header/elems/Search/elems/ModalSearch/ModalSearch.module.css
@@ -45,10 +45,10 @@
   @media (--desktop-l) {
     width: 1105px;
   }
-}
 
-.modalDesktop.show {
-  display: block;
+  &.visible {
+    display: block;
+  }
 }
 
 .buttonClose {
